--- a/pdfcompress.html
+++ b/pdfcompress.html
@@ -170,7 +170,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <i class="fas fa-file-pdf me-2"></i>PDF-MAFIA
+                <i class="fas fa-file-pdf me-2"></i>DRPDFS
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -417,7 +417,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-4 mb-md-0">
-                    <h5 class="mb-3">PDF-MAFIA</h5>
+                    <h5 class="mb-3">DRPDFS</h5>
                     <p class="text-muted small">Your complete PDF solution for all document needs.</p>
                 </div>
                 <div class="col-md-4 mb-4 mb-md-0">
@@ -443,7 +443,7 @@
             </div>
             <hr class="my-4 bg-secondary">
             <div class="text-center text-muted small">
-                &copy; 2023 PDF Toolkit. All rights reserved.
+                &copy; 2025 DRPDFS. All rights reserved.
             </div>
         </div>
     </footer>
