--- a/pdfsearch.html
+++ b/pdfsearch.html
@@ -275,10 +275,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link active" href="#">Tools</a>
+                        <a class="nav-link active" href="index.html">Tools</a>
                     </li>
                     <!--
                     <li class="nav-item mx-2">
