--- a/numberingpdf.html
+++ b/numberingpdf.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Page Numbering Tool</title>
+    <title>DRPDFS Page Numbering Tool</title>
     <script src="https://unpkg.com/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
     <script src="https://unpkg.com/downloadjs@1.4.7"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -286,7 +286,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">PDF Tools Pro</div>
+            <div class="logo">DRPDFS</div>
             <button class="back-btn" onclick="window.history.back()">
                 ← Back to Tools
             </button>
