--- a/pdfscanner.html
+++ b/pdfscanner.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Scanner | PDF Toolkit Pro</title>
+    <title>DRPDFS Scanner | PDF Toolkit Pro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.css">
@@ -397,7 +397,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <i class="fas fa-file-pdf me-2"></i>PDF-MAFIA
+                <i class="fas fa-file-pdf me-2"></i>DRPDFS
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -761,7 +761,7 @@
 
     <footer class="py-3 mt-4 bg-white border-top">
         <div class="container text-center">
-            <p class="text-muted small mb-0">&copy; 2023 PDF Toolkit Pro. All rights reserved.</p>
+            <p class="text-muted small mb-0">&copy; 2025 DRPDFS . All rights reserved.</p>
         </div>
     </footer>
 
