--- a/pdfsplitter.html
+++ b/pdfsplitter.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Splitter | Your PDF Editor</title>
+    <title>DRPDFS Splitter | Your PDF Editor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -150,7 +150,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <i class="fas fa-file-pdf me-2"></i>PDF-MAFIA
+                <i class="fas fa-file-pdf me-2"></i>DRPDFS
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -380,7 +380,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-4 mb-md-0">
-                    <h5 class="mb-3">PDF-MAFIA</h5>
+                    <h5 class="mb-3">DRPDFS</h5>
                     <p class="text-muted small">Your complete PDF solution for all document needs.</p>
                 </div>
                 <div class="col-md-4 mb-4 mb-md-0">
@@ -406,7 +406,7 @@
             </div>
             <hr class="my-4 bg-secondary">
             <div class="text-center text-muted small">
-                &copy; 2025 PDF-MAFIA. All rights reserved.
+                &copy; 2025 DRPDFS. All rights reserved.
             </div>
         </div>
     </footer>
