--- a/pdftojpg.html
+++ b/pdftojpg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF to JPG | Your PDF Editor</title>
+    <title>DRPDFS PDF to JPG | Your PDF Editor</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -202,7 +202,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <i class="fas fa-file-pdf me-2"></i>PDF-MAFIA
+                <i class="fas fa-file-pdf me-2"></i>DRPDFS
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -458,7 +458,7 @@
             </div>
             <hr class="my-4 bg-secondary">
             <div class="text-center text-muted small">
-                &copy; 2023 PDF Toolkit. All rights reserved.
+                &copy; 2025 DRPDFS. All rights reserved.
             </div>
         </div>
     </footer>
