--- a/index.html
+++ b/index.html
@@ -2,7 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Edit PDFs for free online! Rotate, crop, merge, and convert PDF files instantly—no watermarks, no sign-up. Fast, secure, and easy-to-use PDF tools.">
+<!-- Optional keywords -->
+<meta name="keywords" content="free pdf editor, online pdf editor, merge pdf, split pdf, rotate pdf, crop pdf, compress pdf, pdf to word, edit pdf online, no watermark, without watermark">
+
+<!-- Open Graph for social sharing -->
+<meta property="og:title" content="Free PDF Editor Online - Edit, Merge, Convert PDFs | DRPDFs">
+<meta property="og:description" content="Edit PDFs in seconds! Merge, split, rotate, and convert PDFs for free—no sign-up needed. Secure and easy-to-use tools.">
+<!--<meta property="og:image" content="https://www.drpdfs.com/thumbnail.png">-->
+<meta property="og:url" content="https://www.drpdfs.com/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Free PDF Editor Tools - DRPDFs">
+<meta name="twitter:description" content="Edit PDF files online - fast, free, no sign-up. Rotate, crop, convert easily.">
+<!--<meta name="twitter:image" content="https://www.drpdfs.com/thumbnail.png">-->
+
+<!-- Canonical -->
+<link rel="canonical" href="https://www.drpdfs.com/">
+<link rel="icon" href="logo.png" type="image/x-icon">
+
     <title>DRPDFS - Ultimate PDF Tools</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -668,7 +689,7 @@
     
     <header>
         <div class="logo">
-            <img src="https://via.placeholder.com/50x50" alt="DRPDFS Logo">
+            <img src="logo.png" alt="DRPDFS Logo">
             <h1>DRPDFS</h1>
         </div>
         
@@ -1191,5 +1212,16 @@
             });
         });
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "DRPDFs - Free Online PDF Editor",
+  "description": "Edit, merge, and convert PDF files online for free. No installation or sign-up required.",
+  "url": "https://www.drpdfs.com/",
+  "applicationCategory": "DocumentEditor",
+  "operatingSystem": "Web"
+}
+</script>
 </body>
 </html>
