added meta tag aiming SEO

--- a/deletepdfpages.html
+++ b/deletepdfpages.html
@@ -4,7 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> DRPDFS Delete PDF Pages | Your PDF Editor</title>
+    <!-- Primary Meta Tags -->
+<meta name="description" content="Remove unwanted pages from PDFs for free. Delete specific pages or ranges—no sign-up, no watermarks.">
+<meta name="keywords" content="delete PDF pages, remove pages from PDF, erase PDF pages, exclude pages from PDF, PDF page remover, free PDF editor">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.drpdfs.com/deletepdfpages.html">
+<meta property="og:title" content="Delete PDF Pages Online | Free Tool | DRPDFs">
+<meta property="og:description" content="Remove unwanted pages from your PDF—fast, secure, and free.">
+<meta property="og:image" content="https://www.drpdfs.com/Thumbnails/delete.png">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://www.drpdfs.com/deletepdfpages.html">
+<meta name="twitter:title" content="Delete PDF Pages Online | Free Tool | DRPDFs">
+<meta name="twitter:description" content="Easily remove pages from PDFs—no registration needed.">
+<meta name="twitter:image" content="https://www.drpdfs.com/Thumbnails/delete.png">
+
+<!-- Canonical -->
+<link rel="canonical" href="https://www.drpdfs.com/deletepdfpages.html">
+<title>Delete PDF Pages Online - Free Tool | DRPDFs</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
