--- a/pdforganizer.html
+++ b/pdforganizer.html
@@ -4,7 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DRPDFS Organizer | Your PDF Editor</title>
+    <!-- Primary Meta Tags -->
+<meta name="description" content="Organize PDF pages online for free. Reorder, merge, or remove pages with drag & drop—no watermarks, no registration needed.">
+<meta name="keywords" content="organize PDF, rearrange PDF pages, sort PDF, edit PDF order, merge PDF pages, PDF organizer tool, free PDF editor">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.drpdfs.com/pdforganizer.html">
+<meta property="og:title" content="PDF Organizer | Reorder & Merge Pages Online | DRPDFs">
+<meta property="og:description" content="Drag & drop to rearrange PDF pages instantly. 100% free online tool—no signup required.">
+<meta property="og:image" content="https://www.drpdfs.com/Thumbnail/organizer.png">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://www.drpdfs.com/pdforganizer.html">
+<meta name="twitter:title" content="PDF Organizer | Reorder & Merge Pages Online | DRPDFs">
+<meta name="twitter:description" content="Easily organize PDF pages with our free drag & drop tool—no watermarks added.">
+<meta name="twitter:image" content="https://www.drpdfs.com/Thumbnail/organizer.png">
+
+<!-- Canonical -->
+<link rel="canonical" href="https://www.drpdfs.com/pdforganizer.html">
+<title>PDF Organizer Tool - Reorder & Merge Pages Online | DRPDFs
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
