--- a/extractpages.html
+++ b/extractpages.html
@@ -2,10 +2,31 @@
 <html lang="en">
 
 <head>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DRPDFS | Extract PDF Pages | Your PDF Editor</title>
+    <!-- Primary Meta Tags -->
+<meta name="description" content="Extract specific pages from a PDF for free. Select and save individual pages or ranges from your PDF document—no registration needed.">
+<meta name="keywords" content="extract PDF pages, split PDF pages, save PDF pages separately, select pages from PDF, PDF page extractor, free PDF tool">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.drpdfs.com/extractpages">
+<meta property="og:title" content="Extract Pages from PDF | Free Online Tool | DRPDFs">
+<meta property="og:description" content="Extract and save specific pages from your PDF in seconds. No watermarks, no sign-up—100% free.">
+<meta property="og:image" content="https://www.drpdfs.com/Thumbnails/extract.png">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://www.drpdfs.com/extractpages">
+<meta name="twitter:title" content="Extract Pages from PDF | Free Online Tool | DRPDFs">
+<meta name="twitter:description" content="Download only the pages you need from a PDF—fast, secure, and free.">
+<meta name="twitter:image" content="https://www.drpdfs.com/Thumbnails/extract.png">
+
+<!-- Canonical -->
+<link rel="canonical" href="https://www.drpdfs.com/extractpages">
+<title>Extract PDF Pages Online - Free Tool | DRPDFs</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -484,7 +505,7 @@
             <div class="row">
                 <div class="col-md-4 mb-4 mb-md-0">
                     <h5 class="mb-3">DRPDFS<h5>
-                    <p class="text-muted small">Your complete PDF solution for all document needs.</p>
+                            <p class="text-muted small">Your complete PDF solution for all document needs.</p>
                 </div>
                 <div class="col-md-4 mb-4 mb-md-0">
                     <h6 class="mb-3">Quick Links</h6>
