--- a/pdfcompress.html
+++ b/pdfcompress.html
@@ -4,7 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF Compressor | PDF Toolkit</title>
+    <!-- Primary Meta Tags -->
+<meta name="description" content="Reduce PDF file size without losing quality. Free online PDF compressor—no registration, no watermarks.">
+<meta name="keywords" content="compress PDF, reduce PDF size, shrink PDF file, optimize PDF, make PDF smaller, decrease PDF file size">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.drpdfs.com/pdfcompress">
+<meta property="og:title" content="Compress PDF Online | Reduce PDF File Size | DRPDFs">
+<meta property="og:description" content="Shrink large PDFs quickly—100% free, secure, and no quality loss.">
+<meta property="og:image" content="https://www.drpdfs.com/Thumbnails/compress.png">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://www.drpdfs.com/pdfcompress">
+<meta name="twitter:title" content="Compress PDF Online | Reduce PDF File Size | DRPDFs">
+<meta name="twitter:description" content="Make your PDFs smaller without losing quality—free & easy.">
+<meta name="twitter:image" content="https://www.drpdfs.com/Thumbnails/compress.png">
+
+<!-- Canonical -->
+<link rel="canonical" href="https://www.drpdfs.com/pdfcompress">
+<title>Compress PDF Online - Reduce File Size for Free | DRPDFs</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
