--- a/pdfmerger.html
+++ b/pdfmerger.html
@@ -15,14 +15,15 @@
         content="Merge PDFs instantly! Combine multiple PDFs into one document—fast, secure, and free.">
     <meta property="og:url" content="https://www.drpdfs.com/pdf-merger">
     <meta property="og:type" content="website">
-    <!--<meta property="og:image" content="https://www.drpdfs.com/images/pdf-merger-thumbnail.jpg">-->
+    <meta property="og:image" content="https://www.drpdfs.com/Thumbnail/merge.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Free PDF Merger Online - Combine PDF Files | DRPDFs">
     <meta name="twitter:description"
         content="Merge PDFs in seconds—no registration needed. Free, secure, and easy to use.">
-    <!--<meta name="twitter:image" content="https://www.drpdfs.com/images/pdf-merger-thumbnail.jpg">-->
+    <meta name="twitter:image" content="https://www.drpdfs.com/Thumbnail/merge.png">
+
 
     <!-- Canonical -->
     <link rel="canonical" href="https://www.drpdfs.com/pdf-merger">
