--- a/pdfsplitter.html
+++ b/pdfsplitter.html
@@ -4,7 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DRPDFS Splitter | Your PDF Editor</title>
+    <!-- Primary Meta Tags -->
+    <meta name="description"
+        content="Split PDF files online for free. Divide large PDFs into multiple documents by pages or ranges—no watermarks, no registration needed.">
+    <meta name="keywords"
+        content="split PDF, divide PDF, separate PDF pages, PDF splitter tool, extract PDF pages, break PDF document, free PDF tool">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.drpdfs.com/pdfsplitter.html">
+    <meta property="og:title" content="PDF Splitter Online | Free PDF Dividing Tool | DRPDFs">
+    <meta property="og:description"
+        content="Easily split large PDFs into smaller files. Extract specific pages or ranges in seconds—100% free.">
+    <meta property="og:image" content="https://www.drpdfs.com/Thumbnail/split.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://www.drpdfs.com/pdfsplitter.html">
+    <meta name="twitter:title" content="PDF Splitter Online | Free PDF Dividing Tool | DRPDFs">
+    <meta name="twitter:description"
+        content="Break PDFs into parts with one click. No installation or registration required.">
+    <meta name="twitter:image" content="https://www.drpdfs.com/Thumbnail/split.png">
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://www.drpdfs.com/pdfsplitter.html">
+    <title>PDF Splitter Tool - Divide & Extract PDF Pages Online | DRPDFs</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
