added schema for SEO and Newnumbering pages

--- a/deletepdfpages.html
+++ b/deletepdfpages.html
@@ -829,6 +829,17 @@
         }
 
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "PDF Page Remover | Delete Pages Online | DRPDFs",
+  "description": "Remove unwanted pages from PDF files. Free online tool with selective page deletion.",
+  "url": "https://www.drpdfs.com/deletepdfpages",
+  "applicationCategory": "DocumentEditor",
+  "operatingSystem": "Web"
+}
+</script>
 </body>
 
 </html>
