--- a/extractpages.html
+++ b/extractpages.html
@@ -941,6 +941,17 @@
             init();
         });
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "PDF Page Extractor | Save Specific Pages | DRPDFs",
+  "description": "Extract and save individual pages from PDF documents. Free online tool with instant results.",
+  "url": "https://www.drpdfs.com/extractpages",
+  "applicationCategory": "DocumentEditor",
+  "operatingSystem": "Web"
+}
+</script>
 </body>
 
 </html>
