--- a/imagetopdf.html
+++ b/imagetopdf.html
@@ -1218,6 +1218,18 @@
             window.location.href = page; // This redirects to the specified HTML page
         }
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "Image to PDF Converter | DRPDFs",
+  "description": "Convert JPG, PNG, or other images to PDF files instantly. Merge multiple images into one PDF.",
+  "url": "https://www.drpdfs.com/imagetopdf",
+  "applicationCategory": "DocumentConverter",
+  "operatingSystem": "Web",
+  "featureList": "Image conversion, Batch processing, Quality preservation"
+}
+</script>
 </body>
 
 </html>
