--- a/pdfmerger.html
+++ b/pdfmerger.html
@@ -813,10 +813,26 @@
             // Start the app
             init();
         });
+
+
+
+
         function openPage(page) {
             window.location.href = page; // This redirects to the specified HTML page
         }
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "PDF Merger | Combine Files Online | DRPDFs",
+  "description": "Merge multiple PDFs into one document with our free online tool. No watermarks added.",
+  "url": "https://www.drpdfs.com/pdfmerger.html",
+  "applicationCategory": "DocumentEditor",
+  "operatingSystem": "Web",
+  "featureList": "Drag-and-drop interface, Preserve quality, Unlimited files"
+}
+</script>
 </body>
 
 </html>
