--- a/pdforganizer.html
+++ b/pdforganizer.html
@@ -976,6 +976,18 @@
             window.location.href = page; // This redirects to the specified HTML page
         }
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "PDF Organizer | Reorder Pages Online | DRPDFs",
+  "description": "Rearrange PDF pages with drag-and-drop interface. Merge or reorganize documents for free.",
+  "url": "https://www.drpdfs.com/pdforganizer.html",
+  "applicationCategory": "DocumentEditor",
+  "operatingSystem": "Web",
+  "featureList": "Drag-and-drop, Page preview, Instant processing"
+}
+</script>
 </body>
 
 </html>
