--- a/pdfscanner.html
+++ b/pdfscanner.html
@@ -1875,6 +1875,18 @@
         }
 
     </script>
+   <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "PDF Scanner | Create PDF from Scans | DRPDFs",
+  "description": "Convert scanned documents to searchable PDF files online. Free OCR-powered tool.",
+  "url": "https://www.drpdfs.com/pdfscanner.html",
+  "applicationCategory": "DocumentEditor",
+  "operatingSystem": "Web",
+  "featureList": "OCR technology, Mobile-friendly, Preserve formatting"
+}
+</script>
 </body>
 
 </html>
