--- a/pdfsearch.html
+++ b/pdfsearch.html
@@ -880,6 +880,17 @@
         }
 
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "PDF Text Search | DRPDFs",
+  "description": "Search text inside PDF documents instantly. Find keywords or phrases in PDF files online.",
+  "url": "https://www.drpdfs.com/pdfsearch",
+  "applicationCategory": "SearchApplication",
+  "operatingSystem": "Web"
+}
+</script>
 </body>
 
 </html>
