--- a/pdfsplitter.html
+++ b/pdfsplitter.html
@@ -782,6 +782,17 @@
         }
 
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "PDF Splitter | Divide PDF Online | DRPDFs",
+  "description": "Split PDF files by pages or extract specific ranges. Free online tool with instant results.",
+  "url": "https://www.drpdfs.com/pdfsplitter.html",
+  "applicationCategory": "DocumentEditor",
+  "operatingSystem": "Web"
+}
+</script>
 </body>
 
 </html>
