--- a/pdftojpg.html
+++ b/pdftojpg.html
@@ -865,10 +865,29 @@
             init();
         });
 
+
+
+
         function openPage(page) {
             window.location.href = page; // This redirects to the specified HTML page
         }
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "PDF to JPG Converter | DRPDFs",
+  "description": "Convert PDF pages to high-quality JPG images online for free. No registration required.",
+  "url": "https://www.drpdfs.com/pdftojpg",
+  "applicationCategory": "DocumentConverter",
+  "operatingSystem": "Web",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  }
+}
+</script>
 </body>
 
 </html>
