--- a/rotatepdf.html
+++ b/rotatepdf.html
@@ -1073,6 +1073,17 @@
 
 
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "PDF Rotator | Fix Page Orientation | DRPDFs",
+  "description": "Rotate PDF pages 90° or 180° to correct orientation. Free online tool with instant processing.",
+  "url": "https://www.drpdfs.com/rotatepdf",
+  "applicationCategory": "DocumentEditor",
+  "operatingSystem": "Web"
+}
+</script>
 </body>
 
 </html>
