--- a/pdfcompress.html
+++ b/pdfcompress.html
@@ -780,6 +780,22 @@
 
 
     </script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "PDF Compressor | DRPDFs",
+  "description": "Reduce PDF file size without quality loss. Free online PDF compression tool.",
+  "url": "https://www.drpdfs.com/pdfcompress",
+  "applicationCategory": "DocumentEditor",
+  "operatingSystem": "Web",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.8",
+    "reviewCount": "1250"
+  }
+}
+</script>
 </body>
 
 </html>
