--- a/index.html
+++ b/index.html
@@ -883,8 +883,9 @@
         </div>
         -->
 
-        <!--
-        <div class="tool-card" onclick="openPage('pdftoexcel.html')">
+        
+        <div class="tool-card" >
+            <a style="color: none;" href="https://pdftoexcel-h2lo.onrender.com">
             <div class="tool-icon">
                 <i class="fas fa-file-excel"></i>
             </div>
@@ -893,7 +894,9 @@
                 <p>Extract tables from PDF to Excel spreadsheets</p>
                 <button class="tool-btn">Use Tool</button>
             </div>
+            </a> 
         </div>
+        <!--
         
         <div class="tool-card" onclick="openToolModal('unlock-pdf')">
             <div class="tool-icon">
