removed anchor tag's default style

--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
 
         
         <div class="tool-card" >
-            <a style="color: none;" href="https://pdftoexcel-h2lo.onrender.com">
+            <a style="text-decoration: none;" href="https://pdftoexcel-h2lo.onrender.com">
             <div class="tool-icon">
                 <i class="fas fa-file-excel"></i>
             </div>
